# jcook3701.utils

./: .ansible-lint  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.rst  Makefile  README.md  autodoc.config.yaml  cspell.json  galaxy-importer.cfg  galaxy.yml  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml  z-developer-issue.yml
.github/workflows/: changelog.yml  cla.yml  dependency-check.yml  format-check.yml  generate_changelog.yml  jekyll-gh-pages.yml  lint-check.yml  release.yml  security-audit.yml  spellcheck.yml  tests.yml  typecheck.yml
changelogs/: changelog.yml  config.yaml
changelogs/fragments/: initial_release_summary.yml
docs/: cookiecutter_input.json
docs/jekyll/: .gitignore  Makefile  README.md  _config.yml  index.md
docs/jekyll/_manual/contribute/: create-feature-request.md  create-pull-request.md  developer-guide.md  index.md
docs/jekyll/_manual/developer-resources/: cla-privacy-policy.md  cla.md  contribute.md  index.md
docs/jekyll/_manual/introduction/: getting-started.md  index.md  installation-guide.md
docs/jekyll/_manual/setup-guide/: index.md  requirements.md
docs/jekyll/_manual/troubleshooting/: faq.md  index.md
docs/jekyll/_manual/tutorials/: index.md
docs/jekyll/_manual/upgrade-guide/: index.md
docs/jekyll/_manual/whatsnew/: index.md
docs/jekyll/_resources/: repository-link.md
docs/jekyll/ansible-docs/: ansible-autodoc.md
docs/jekyll/docs/: cookiecutter_input.json
docs/jekyll/sphinx/: api.md
docs/sphinx/: .gitignore  Makefile  api.rst  conf.py
docs/sphinx/docs/: cookiecutter_input.json
meta/: runtime.yml
playbooks/: package-facts-all.yml
plugins/modules/: README.md  ansible_doc_gen.py  dns_inventory_gen.py  fetch_tags_module.py  jpg_to_icons.py  parse_tags_module.py
plugins/test/: core_tests.py
roles/autobuild/: README.md
roles/autobuild/meta/: argument_spec.yml  main.yml
roles/autobuild/tasks/: clear-build-variables.yml  pkg-source-build-init-routine.yml  pkg-source-build-routine.yml
roles/autobuild/tasks/autovars/: autobuild-variable-init.yml  bashrc-variable-init.yml  checkinstall-variable-init.yml  update-alternatives-variable-init.yml
roles/autobuild/tasks/build-tools/: cmake-build.yml  make-build.yml  meson-ninja-build.yml
roles/autobuild/tasks/git/: fetch_github_tags.yml  parse_github_tags.yml
roles/autobuild/tasks/install-tools/: bashrc-updater.yml  checkinstall.yml
roles/autobuild/templates/: bashrc-block.j2  checkinstall.j2
roles/general/: README.md
roles/general/files/scripts/: .gitignore
roles/general/meta/: main.yml
roles/general/tasks/: apt-clean-and-update.yml  package-facts.yml  package-manager-switch.yml  reload-shell.yml  sudo_user_facts.yml  update-alternatives.yml
roles/general/tasks/filters/: users-with-home-directory.yml
roles/iso_downloader/meta/: main.yml
roles/iso_downloader/vars/: ubuntu_noble_numbat.yml
roles/pkg_manager/: README.md
roles/pkg_manager/defaults/: main.yml
roles/pkg_manager/meta/: argument_specs.yml  main.yml
roles/pkg_manager/tasks/: archlinux.yml  debian.yml  default_package_manager.yml  main.yml  redhat.yml
roles/snap/: README.md
roles/snap/meta/: main.yml
roles/snap/tasks/: main.yml
tests/: config.yml
tests/units/plugins/modules/: test_dns_inventory_gen.py  test_fetch_tags_module.py  test_parse_tags_module.py
tests/units/plugins/test/: test_core_tests.py
